--- a/package.json
+++ b/package.json
@@ -17,5 +17,16 @@
   "bugs": {
     "url": "https://github.com/RoninHietanen/Tech_Blog/issues"
   },
-  "homepage": "https://github.com/RoninHietanen/Tech_Blog#readme"
+  "homepage": "https://github.com/RoninHietanen/Tech_Blog#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.1",
+    "dotenv": "^10.0.0",
+    "express-handlebars": "^5.3.3",
+    "express-session": "^1.17.2",
+    "express.js": "^1.0.0",
+    "mysql2": "^2.3.0",
+    "sequelize": "^6.6.5"
+  },
+  "devDependencies": {}
 }
